# build_llm_from_scratch

./: .gitignore  AGENTS.md  README.md  config.py  create_data_loader.py  create_dataset.py  feedforward.py  gpt_model.py  main.py  multihead_attention.py  pyproject.toml  settings.env  tokenizer.py  transformer.py
services/: config.py
services/load_weights/: gpt_download.py  main.py  model_weights.py
services/model/: gpt_model.py  main.py
services/model/dataset/: create_data_loader.py  create_dataset.py
services/model/transformer/: multihead_attention.py  transformer.py
services/model/utils/: feedforward.py  gelu.py  layernorm.py
services/train/: main.py
services/train/evaluation/: evaluate_model.py
services/train/generate_text/: generate.py
services/train/loss_calculation/: loss.py
services/train/train_iteration/: train.py
