[project]
name = "llm-sebastian-raschka"
version = "0.1.0"
description = "LLM playground"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "chainlit==2.7.2",
  "debugpy>=1.8.1",
  "loguru>=0.7.2",
  "pydantic>=2.11",
  "pydantic-settings>=2.1",
  "tensorflow>=2.20.0",
  "tiktoken>=0.9",
  "torch==2.8.0+cpu",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["services", "."]
extraPaths = ["."]          # This helps with imports

# Add PyTorch CPU index as additional source
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true                              # Only use this index when explicitly referenced

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
